# Vala_gobject_introspection_python

./: README.md  commands  hello-1.0.gir  hello-1.0.typelib  hello.h  hello.vapi  helloWorld.vala  meson.build
